--- a/index2.html
+++ b/index2.html
@@ -63,7 +63,7 @@
 
                 <!-- Center Logo -->
                 <div class="absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2">
-                    <a href="/" aria-label="Home">
+                    <a href="index2.html" aria-label="Home">
                         <img src="Images/T1White.png" alt="TierOne Logo"
                             class="h-16 sm:h-20 object-contain hover:opacity-90 transition-opacity duration-200" />
                     </a>
@@ -109,7 +109,7 @@
             <div class="absolute inset-0 bg-black bg-opacity-30 flex flex-col justify-end items-center p-6 space-y-2">
                 <div data-lucide="handshake" class="text-white w-10 h-10"></div>
                 <div class="text-white text-4xl font-semibold">Finance</div>
-                <a href="#" class="text-white text-lg underline">See More</a>
+                <a href="finance.html" class="text-white text-lg underline">See More</a>
             </div>
         </div>
 
