feat: preparation.html

--- a/index2.html
+++ b/index2.html
@@ -129,7 +129,7 @@
             <div class="absolute inset-0 bg-black bg-opacity-30 flex flex-col justify-end items-center p-6 space-y-2">
                 <div data-lucide="wrench" class="text-white w-10 h-10"></div>
                 <div class="text-white text-4xl font-semibold">Preparation</div>
-                <a href="preperation.html" class="text-white text-lg underline">See More</a>
+                <a href="preparation.html" class="text-white text-lg underline">See More</a>
             </div>
         </div>
         <div class="relative max-h-[600px] overflow-hidden shadow-lg group">
