--- a/warranty.html
+++ b/warranty.html
@@ -228,34 +228,64 @@
 
             <div>
                 <div class="inline-block">
-                    <h2 class="text-xl font-light uppercase tracking-[0.25em] mb-2">FEATURED VEHICLES</h2>
+                    <h2 class="text-xl font-light uppercase tracking-[0.25em] mb-2">WARRANTY EXTENSION</h2>
                     <div class="h-px bg-white/50 w-full"></div>
                 </div>
-                <div class="bg-[#2A2E35] rounded-lg shadow-md overflow-hidden mt-3">
-                    <!-- Vehicle Image -->
-                    <img src="https://img.cdn.dragon2000.net/C2846/U737/IMG_34382-medium.jpg" alt="Porsche Cayman GT4"
-                        class="w-full h-auto" />
-
-                    <!-- Info Row -->
-                    <div class="flex">
-                        <!-- Left Text Block -->
-                        <div class="flex-1 bg-[#2A2E35] p-4">
-                            <h3 class="text-white font-semibold text-sm">PORSCHE CAYMAN 981 GT4</h3>
-                            <p class="text-xs text-gray-400 leading-snug">
-                                3.8 981 GT4 Coupe 2dr Petrol Manual Euro 6 (385ps)
-                            </p>
-                            <p class="text-white mt-1 font-medium text-base">£57,980</p>
-                        </div>
-
-                        <!-- Right Button Block -->
-                        <div class="bg-[#1E2126] flex items-center justify-center p-4">
-                            <button
-                                class="text-sm border border-white text-white px-4 py-2 rounded hover:bg-white hover:text-black transition">
-                                Details
-                            </button>
-                        </div>
-                    </div>
+                <div class="mt-3 bg-[#1E2126] text-white shadow-lg overflow-hidden">
+                  <table class="w-full text-sm">
+                    <thead>
+                      <tr class="bg-[#24272D] text-left text-white uppercase text-xs tracking-widest">
+                        <th class="px-6 py-3">Extend your 6 month warranty</th>
+                        <th class="px-6 py-3">Price</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr class="">
+                        <td class="px-6 py-4 text-gray-300">An additional 6 months</td>
+                        <td class="px-6 py-4 text-gray-300">£150.00</td>
+                      </tr>
+                      <tr class="bg-[#2A2E35]">
+                        <td class="px-6 py-4 text-gray-300">An additional 1 year</td>
+                        <td class="px-6 py-4 text-gray-300">£250.00</td>
+                      </tr>
+                      <tr>
+                        <td class="px-6 py-4 text-gray-300">An additional two years</td>
+                        <td class="px-6 py-4 text-gray-300">£350.00</td>
+                      </tr>
+                    </tbody>
+                  </table>
                 </div>
+
+
+                <div class="inline-block mt-3">
+                  <h2 class="text-xl font-light uppercase tracking-[0.25em] mb-2">FEATURED VEHICLE</h2>
+                  <div class="h-px bg-white/50 w-full"></div>
+              </div>
+              <div class="bg-[#2A2E35] rounded-lg shadow-md overflow-hidden mt-3">
+                  <!-- Vehicle Image -->
+                  <img src="https://img.cdn.dragon2000.net/C2846/U737/IMG_34382-medium.jpg" alt="Porsche Cayman GT4"
+                      class="w-full h-auto" />
+
+                  <!-- Info Row -->
+                  <div class="flex">
+                      <!-- Left Text Block -->
+                      <div class="flex-1 bg-[#2A2E35] p-4">
+                          <h3 class="text-white font-semibold text-sm">PORSCHE CAYMAN 981 GT4</h3>
+                          <p class="text-xs text-gray-400 leading-snug">
+                              3.8 981 GT4 Coupe 2dr Petrol Manual Euro 6 (385ps)
+                          </p>
+                          <p class="text-white mt-1 font-medium text-base">£57,980</p>
+                      </div>
+
+                      <!-- Right Button Block -->
+                      <div class="bg-[#1E2126] flex items-center justify-center p-4">
+                          <button
+                              class="text-sm border border-white text-white px-4 py-2 rounded hover:bg-white hover:text-black transition">
+                              Details
+                          </button>
+                      </div>
+                  </div>
+              </div>
             </div>
 
         </div>
