--- a/index2.html
+++ b/index2.html
@@ -137,7 +137,7 @@
             <div class="absolute inset-0 bg-black bg-opacity-30 flex flex-col justify-end items-center p-6 space-y-2">
                 <div data-lucide="handshake" class="text-white w-10 h-10"></div>
                 <div class="text-white text-4xl font-semibold">Warranty</div>
-                <a href="#" class="text-white text-lg underline">See More</a>
+                <a href="warranty.html" class="text-white text-lg underline">See More</a>
             </div>
         </div>
     </div>
