feat: sell your car

--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                 </a>
 
                 <!-- Sell Card -->
-                <a href="#"
+                <a href="sellyourcar.html"
                     class="relative group w-[32rem] overflow-hidden rounded-md min-h-[36rem] text-center shadow-lg flex flex-col justify-between">
                     <!-- Background image -->
                     <div class="absolute inset-0 bg-cover bg-center bg-no-repeat transition-transform duration-700 ease-in-out group-hover:scale-110"
