feat: added large shadow to image.

--- a/sellyourcar.html
+++ b/sellyourcar.html
@@ -291,7 +291,7 @@
       
           <!-- Right: Image -->
           <div>
-            <img src="https://w0.peakpx.com/wallpaper/431/761/HD-wallpaper-2018-audi-r8-v10-rws-uk-spec-interior-car.jpg" alt="Luxury Interior" class="rounded-2xl shadow-lg w-full h-auto object-cover" />
+            <img src="https://w0.peakpx.com/wallpaper/431/761/HD-wallpaper-2018-audi-r8-v10-rws-uk-spec-interior-car.jpg" alt="Luxury Interior" class="rounded-2xl large-shadow w-full h-auto object-cover" />
           </div>
         </div>
       </section>
