feat: contact us

--- a/index2.html
+++ b/index2.html
@@ -43,12 +43,16 @@
             <div class="max-w-screen-xl mx-auto h-full flex items-center justify-between relative">
                 <!-- Left Icons -->
                 <div class="flex items-center gap-4">
-                    <button class="p-2 rounded-full hover:bg-white/10 transition-colors" aria-label="Call">
-                        <i data-lucide="phone" class="w-5 h-5 text-white"></i>
-                    </button>
-                    <button class="p-2 rounded-full hover:bg-white/10 transition-colors" aria-label="Email">
-                        <i data-lucide="mail" class="w-5 h-5 text-white"></i>
-                    </button>
+                    <a href="contactus.html" aria-label="Call">
+                        <button class="p-2 rounded-full hover:bg-white/10 transition-colors">
+                            <i data-lucide="phone" class="w-5 h-5 text-white"></i>
+                        </button>
+                    </a>
+                    <a href="contactus.html" aria-label="Email">
+                        <button class="p-2 rounded-full hover:bg-white/10 transition-colors">
+                            <i data-lucide="mail" class="w-5 h-5 text-white"></i>
+                        </button>
+                    </a>
                 </div>
 
                 <!-- Right Icons -->
