feat: literally just a line

--- a/contactus.html
+++ b/contactus.html
@@ -58,7 +58,7 @@
         </div>
     </nav>
 
-    <section class="text-white pt-52 px-4 mb-24">
+    <section class="text-white pt-52 px-4 mb-16">
         <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-12 px-6">
 
             <!-- Left Column: Address & Directions -->
@@ -145,6 +145,7 @@
             </div>
         </div>
     </section>
+    <div class="border-t border-white/10 my-8 w-full max-w-5xl mx-auto"></div>
 
     <!-- CONTACT FORM (with title) -->
     <section class="text-white pb-24 px-4">
