--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,7 @@
     <title>Tier One Automotive</title>
     <link href="output.css" rel="stylesheet" />
     <link href="styles.css" rel="stylesheet" />
+    <script src="navbar.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -38,9 +39,8 @@
         </video>
 
         <!-- Navbar -->
-        <nav
-            class="h-24 px-4 sm:px-8 sticky top-0 z-50 bg-black/40 backdrop-blur-md border-b border-white/10 shadow-lg">
-            <div class="max-w-screen-xl mx-auto h-full flex items-center justify-between relative">
+        <nav class="h-24 w-full absolute top-0 left-0 bg-black/40 backdrop-blur-md border-b border-white/10 shadow-lg">
+            <div class="max-w-screen-xl mx-auto h-full flex items-center justify-between px-4 sm:px-8 relative">
                 <!-- Left Icons -->
                 <div class="flex items-center gap-4">
                     <a href="contactus.html" aria-label="Call">
@@ -61,7 +61,7 @@
                         <i data-lucide="search" class="w-5 h-5 text-white"></i>
                     </button>
                     <button class="p-2 rounded-full hover:bg-white/10 transition-colors" aria-label="Filter">
-                        <i data-lucide="filter" class="w-5 h-5 text-white"></i>
+                        <i data-lucide="menu" class="w-5 h-5 text-white"></i>
                     </button>
                 </div>
 
@@ -74,6 +74,41 @@
                 </div>
             </div>
         </nav>
+
+        <!-- Overlay -->
+        <div id="menu-overlay" class="fixed inset-0 bg-black/70 z-90 hidden"></div>
+
+        <!-- Slide-in Menu -->
+        <div id="side-menu"
+            class="fixed top-0 right-0 h-full w-96 bg-[#0f1012] text-white z-50 transform translate-x-full transition-transform duration-300 ease-in-out shadow-lg">
+            <div class="flex items-center justify-between px-6 h-24 border-b border-white/10">
+                <img src="Images/T1White.png" alt="Tier One Logo" class="h-16 object-contain" />
+                <button id="close-menu" class="text-white" aria-label="Close">
+                    <i data-lucide="x" class="w-6 h-6"></i>
+                </button>
+            </div>
+            <ul class="pl-3 pt-4 tracking-wide uppercase text-lg tracking-[0.15rem]">
+                <li><a href="index2.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Home</a></li>
+                <li><a href="stock.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">View Stock</a></li>
+                <li><a href="sellyourcar.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Sell My Car</a></li>
+                <li><a href="preparation.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Preparation</a></li>
+                <li><a href="finance.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Finance</a></li>
+                <li><a href="warranty.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Warranty</a></li>
+                <li><a href="previouslysold.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Previously Sold</a></li>
+                <li><a href="sourcing.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Vehicle Sourcing</a></li>
+            </ul>
+
+            <div class="absolute bottom-6 left-0 w-full px-6 border-t border-white/10 pt-6 flex gap-4 justify-start">
+                <a href="https://instagram.com" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"
+                        class="w-7 h-7 rounded-md">
+                </a>
+                <a href="https://facebook.com" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"
+                        alt="Facebook" class="w-7 h-7">
+                </a>
+            </div>
+        </div>
 
         <!-- CTA BUTTON GROUP -->
         <div
@@ -109,7 +144,9 @@
 
         <!-- Finance Card -->
         <div class="relative max-h-[600px] overflow-hidden shadow-lg group">
-            <img src="Images/red.png" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105" alt="Finance" />
+            <img src="Images/red.png"
+                class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105"
+                alt="Finance" />
             <div class="absolute inset-0 bg-black bg-opacity-30 flex flex-col justify-end items-center p-6 space-y-2">
                 <div data-lucide="handshake" class="text-white w-10 h-10"></div>
                 <div class="text-white text-4xl font-semibold">Finance</div>
@@ -119,7 +156,9 @@
 
         <!-- Sell Your Car Card -->
         <div class="relative max-h-[600px] overflow-hidden shadow-lg group">
-            <img src="Images/yellow.png" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105" alt="Sell Your Car" />
+            <img src="Images/yellow.png"
+                class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105"
+                alt="Sell Your Car" />
             <div class="absolute inset-0 bg-black bg-opacity-30 flex flex-col justify-end items-center p-6 space-y-2">
                 <div data-lucide="hand-coins" class="text-white w-10 h-10"></div>
                 <div class="text-white text-4xl font-semibold">Sell Your Car</div>
@@ -129,7 +168,9 @@
 
         <!-- Preparation Card -->
         <div class="relative max-h-[600px] overflow-hidden shadow-lg group">
-            <img src="Images/blue.png" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105" alt="Preparation" />
+            <img src="Images/blue.png"
+                class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105"
+                alt="Preparation" />
             <div class="absolute inset-0 bg-black bg-opacity-30 flex flex-col justify-end items-center p-6 space-y-2">
                 <div data-lucide="wrench" class="text-white w-10 h-10"></div>
                 <div class="text-white text-4xl font-semibold">Preparation</div>
@@ -137,7 +178,9 @@
             </div>
         </div>
         <div class="relative max-h-[600px] overflow-hidden shadow-lg group">
-            <img src="Images/green.png" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105" alt="Finance" />
+            <img src="Images/green.png"
+                class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105"
+                alt="Finance" />
             <div class="absolute inset-0 bg-black bg-opacity-30 flex flex-col justify-end items-center p-6 space-y-2">
                 <div data-lucide="handshake" class="text-white w-10 h-10"></div>
                 <div class="text-white text-4xl font-semibold">Warranty</div>
@@ -206,7 +249,7 @@
             <div class="embla__container">
                 <div class="embla__slide">
                     <div class="card flex flex-col  rounded-lg shadow-md overflow-hidden">
-                        
+
                         <div class="h-[240px]">
                             <img src="https://img.cdn.dragon2000.net/C2846/U737/IMG_34382-medium.jpg"
                                 alt="Porsche Cayman GT4" class="w-full h-full object-cover object-[center_-110px]" />
