--- a/finance.html
+++ b/finance.html
@@ -40,10 +40,46 @@
       </div>
 
       <!-- Right Icons -->
-      <div class="flex items-center gap-4">
-        <button class="p-2 rounded-full hover:bg-white/10 transition-colors" aria-label="Search">
-          <i data-lucide="search" class="w-5 h-5 text-white"></i>
-        </button>
+      <div class="flex items-center gap-2">
+        <!-- Search Toggle -->
+        <div id="search-container" class="relative flex items-center">
+          <!-- Search Icon Button -->
+          <button id="toggle-search" class="p-2 rounded-full hover:bg-white/10 transition-colors" aria-label="Search">
+            <i data-lucide="search" class="w-5 h-5 text-white"></i>
+          </button>
+
+          <!-- Expanding Form -->
+          <div id="search-box"
+            class="absolute right-0 top-1/2 -translate-y-1/2 bg-[#2A2E35] text-white rounded-full overflow-hidden px-4 py-2 flex items-center gap-1 large-shadow transform scale-x-0 opacity-0 transition-all duration-300 origin-right z-50">
+
+            <!-- Make Dropdown -->
+            <div class="relative">
+              <select class="bg-transparent text-white appearance-none pr-6 pl-1 py-1 rounded focus:outline-none">
+                <option class="bg-[#2A2E35]">Make</option>
+                <option class="bg-[#2A2E35]">Audi</option>
+                <option class="bg-[#2A2E35]">BMW</option>
+              </select>
+              <i data-lucide="chevron-down"
+                class="pointer-events-none absolute right-0 top-1/2 -translate-y-1/2 w-4 h-4 text-white"></i>
+            </div>
+
+            <!-- Model Dropdown -->
+            <div class="relative">
+              <select class="bg-[transparent] text-white appearance-none pr-6 pl-3 py-1 rounded focus:outline-none">
+                <option class="bg-[#2A2E35]">Model</option>
+                <option class="bg-[#2A2E35]">M3</option>
+                <option class="bg-[#2A2E35]">RS5</option>
+              </select>
+              <i data-lucide="chevron-down"
+                class="pointer-events-none absolute right-0 top-1/2 -translate-y-1/2 w-4 h-4 text-white "></i>
+            </div>
+
+            <!-- Search Button -->
+            <button class="text-white pl-3">
+              <i data-lucide="search" class="w-5 h-5"></i>
+            </button>
+          </div>
+        </div>
         <button class="p-2 rounded-full hover:bg-white/10 transition-colors" aria-label="Filter">
           <i data-lucide="menu" class="w-5 h-5 text-white"></i>
         </button>
