feat: smaller video file, index2 -> index.html

--- a/sellyourcar.html
+++ b/sellyourcar.html
@@ -91,7 +91,7 @@
 
             <!-- Center Logo -->
             <div class="absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2">
-                <a href="index2.html" aria-label="Home">
+                <a href="index.html" aria-label="Home">
                     <img src="Images/T1White.png" alt="TierOne Logo"
                         class="h-16 sm:h-20 object-contain hover:opacity-90 transition-opacity duration-200" />
                 </a>
