--- a/warranty.html
+++ b/warranty.html
@@ -87,7 +87,7 @@
 
       <!-- Center Logo -->
       <div class="absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2">
-        <a href="index2.html" aria-label="Home">
+        <a href="index.html" aria-label="Home">
           <img src="Images/T1White.png" alt="TierOne Logo"
             class="h-16 sm:h-20 object-contain hover:opacity-90 transition-opacity duration-200" />
         </a>
@@ -110,7 +110,7 @@
       </button>
     </div>
     <ul class="pl-3 pt-4 tracking-wide uppercase text-lg tracking-[0.15rem]">
-      <li><a href="index2.html"
+      <li><a href="index.html"
           class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Home</a>
       </li>
       <li><a href="stock.html"
