--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Hero Section with Video Background -->
     <section class="relative w-full h-screen overflow-hidden">
         <video autoplay muted loop playsinline class="absolute top-0 left-0 w-full h-full object-cover z-[-1]">
-            <source src="Videos/Mclaren2.mp4" type="video/mp4" />
+            <source src="Video/Mclaren2.mp4" type="video/mp4" />
         </video>
 
         <!-- Navbar -->
