--- a/contactus.html
+++ b/contactus.html
@@ -108,32 +108,15 @@
             </button>
         </div>
         <ul class="pl-3 pt-4 tracking-wide uppercase text-lg tracking-[0.15rem]">
-            <li><a href="index.html"
-                    class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Home</a>
-            </li>
-            <li><a href="stock.html"
-                    class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">View
-                    Stock</a></li>
-            <li><a href="sellyourcar.html"
-                    class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Sell
-                    My Car</a></li>
-            <li><a href="preparation.html"
-                    class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Preparation</a>
-            </li>
-            <li><a href="finance.html"
-                    class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Finance</a>
-            </li>
-            <li><a href="warranty.html"
-                    class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Warranty</a>
-            </li>
-            <li><a href="previouslysold.html"
-                    class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Previously
-                    Sold</a></li>
-            <li><a href="sourcing.html"
-                    class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Vehicle
-                    Sourcing</a></li>
+            <li><a href="index.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Home</a></li>
+            <li><a href="stock.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">View Stock</a></li>
+            <li><a href="sellyourcar.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Sell My Car</a></li>
+            <li><a href="preparation.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Preparation</a></li>
+            <li><a href="finance.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Finance</a></li>
+            <li><a href="warranty.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Warranty</a></li>
+            <li><a href="previouslysold.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Previously Sold</a></li>
+            <li><a href="sourcing.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Vehicle Sourcing</a></li>
         </ul>
-
         <!-- Social Links -->
         <div class="absolute bottom-6 left-0 w-full px-6 border-t border-white/10 pt-6 flex gap-4 justify-start">
             <a href="https://instagram.com" target="_blank">
