--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </button>
             </div>
             <ul class="pl-3 pt-4 tracking-wide uppercase text-lg tracking-[0.15rem]">
-                <li><a href="index2.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Home</a></li>
+                <li><a href="index.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Home</a></li>
                 <li><a href="stock.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">View Stock</a></li>
                 <li><a href="sellyourcar.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Sell My Car</a></li>
                 <li><a href="preparation.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Preparation</a></li>
