--- a/finance.html
+++ b/finance.html
@@ -98,36 +98,36 @@
   <!-- Overlay -->
   <div id="menu-overlay" class="z-50 fixed inset-0 bg-black/70  hidden"></div>
 
-  <!-- Slide-in Menu -->
   <div id="side-menu"
-    class="z-50 fixed top-0 right-0 h-full w-96 bg-[#0f1012] text-white  transform translate-x-full transition-transform duration-300 ease-in-out shadow-lg">
-    <div class="flex items-center justify-between px-6 h-24 border-b border-white/10">
-      <img src="Images/T1White.png" alt="Tier One Logo" class="h-16 object-contain" />
-      <button id="close-menu" class="text-white" aria-label="Close">
-        <i data-lucide="x" class="w-6 h-6"></i>
-      </button>
-    </div>
-    <ul class="pl-3 pt-4 tracking-wide uppercase text-lg tracking-[0.15rem]">
-      <li><a href="index.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Home</a></li>
-      <li><a href="stock.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">View Stock</a></li>
-      <li><a href="sellyourcar.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Sell My Car</a></li>
-      <li><a href="preparation.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Preparation</a></li>
-      <li><a href="finance.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Finance</a></li>
-      <li><a href="warranty.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Warranty</a></li>
-      <li><a href="previouslysold.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Previously Sold</a></li>
-      <li><a href="sourcing.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Vehicle Sourcing</a></li>
-  </ul>
+        class="fixed top-0 right-0 h-full w-96 bg-[#0f1012] text-white z-50 transform translate-x-full transition-transform duration-300 ease-in-out shadow-lg">
+        <div class="flex items-center justify-between px-6 h-24 border-b border-white/10">
+            <img src="Images/T1White.png" alt="Tier One Logo" class="h-16 object-contain" />
+            <button id="close-menu" class="text-white" aria-label="Close">
+                <i data-lucide="x" class="w-6 h-6"></i>
+            </button>
+        </div>
+        <ul class="pl-3 pt-4 tracking-wide uppercase text-lg tracking-[0.15rem]">
+            <li><a href="index.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Home</a></li>
+            <li><a href="stock.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">View Stock</a></li>
+            <li><a href="sellyourcar.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Sell My Car</a></li>
+            <li><a href="preparation.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Preparation</a></li>
+            <li><a href="finance.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Finance</a></li>
+            <li><a href="warranty.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Warranty</a></li>
+            <li><a href="previouslysold.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Previously Sold</a></li>
+            <li><a href="sourcing.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Vehicle Sourcing</a></li>
+        </ul>
 
-    <div class="absolute bottom-6 left-0 w-full px-6 border-t border-white/10 pt-6 flex gap-4 justify-start">
-      <a href="https://instagram.com" target="_blank">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"
-              class="w-7 h-7 rounded-md">
-      </a>
-      <a href="https://facebook.com" target="_blank">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"
-              alt="Facebook" class="w-7 h-7">
-      </a>
-  </div>
+        <div class="absolute bottom-6 left-0 w-full px-6 border-t border-white/10 pt-6 flex gap-4 justify-start">
+            <a href="https://instagram.com" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"
+                    class="w-7 h-7 rounded-md">
+            </a>
+            <a href="https://facebook.com" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"
+                    alt="Facebook" class="w-7 h-7">
+            </a>
+        </div>
+    </div>
   </div>
 
   <!-- Hero Section -->
