--- a/sellyourcar.html
+++ b/sellyourcar.html
@@ -137,7 +137,9 @@
     Do we like the shadow?
     -->
     <section class="relative h-[48vh] w-full overflow-hidden z-0 large-shadow">
-        <img src="./Images/Sell.png" alt="Vehicle Preparation Banner" />
+        <img src="./Images/Sell.png" alt="Vehicle Preparation Banner"
+        class="absolute inset-0 w-full h-full object-cover z-[-1]" />
+   
 
             class="absolute inset-0 w-full h-full object-cover z-[-1]" />
 
