--- a/sellyourcar.html
+++ b/sellyourcar.html
@@ -137,10 +137,7 @@
     Do we like the shadow?
     -->
     <section class="relative h-[48vh] w-full overflow-hidden z-0 large-shadow">
-        <img src="./Images/Sell.png" alt="Vehicle Preparation Banner"
-        class="absolute inset-0 w-full h-full object-cover z-[-1]" />
-   
-
+        <img src="Images/sell.png" alt="Vehicle Preparation Banner"
             class="absolute inset-0 w-full h-full object-cover z-[-1]" />
 
         <!-- Dark Overlay (optional for legibility) -->
