feat: warranty.html responsiveness (desktop only)

--- a/warranty.html
+++ b/warranty.html
@@ -110,15 +110,31 @@
       </button>
     </div>
     <ul class="pl-3 pt-4 tracking-wide uppercase text-lg tracking-[0.15rem]">
-      <li><a href="index.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Home</a></li>
-      <li><a href="stock.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">View Stock</a></li>
-      <li><a href="sellyourcar.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Sell My Car</a></li>
-      <li><a href="preparation.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Preparation</a></li>
-      <li><a href="finance.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Finance</a></li>
-      <li><a href="warranty.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Warranty</a></li>
-      <li><a href="previouslysold.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Previously Sold</a></li>
-      <li><a href="sourcing.html" class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Vehicle Sourcing</a></li>
-  </ul>
+      <li><a href="index.html"
+          class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Home</a>
+      </li>
+      <li><a href="stock.html"
+          class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">View
+          Stock</a></li>
+      <li><a href="sellyourcar.html"
+          class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Sell
+          My Car</a></li>
+      <li><a href="preparation.html"
+          class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Preparation</a>
+      </li>
+      <li><a href="finance.html"
+          class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Finance</a>
+      </li>
+      <li><a href="warranty.html"
+          class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Warranty</a>
+      </li>
+      <li><a href="previouslysold.html"
+          class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Previously
+          Sold</a></li>
+      <li><a href="sourcing.html"
+          class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Vehicle
+          Sourcing</a></li>
+    </ul>
     <div class="absolute bottom-6 left-0 w-full px-6 border-t border-white/10 pt-6 flex gap-4 justify-start">
       <a href="https://instagram.com" target="_blank">
         <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"
@@ -132,23 +148,24 @@
   </div>
 
   <div class="mt-40 mb-16 px-4">
-    <div class="max-w-4xl mx-auto text-center">
-      <h1 class="text-3xl md:text-5xl font-light tracking-[0.25em] uppercase mb-4">WARRANTY</h1>
-      <p class="text-2xl font-light">
+    <div class="max-w-4xl md:max-w-xl lg:max-w-5xl xl:max-w-6xl 2xl:max-w-6xl mx-auto text-center">
+      <h1 class="text-3xl md:text-4xl lg:text-5xl 2xl:text-6xl font-light tracking-[0.25em] uppercase mb-4">
+        WARRANTY
+      </h1>
+      <p class="text-base md:text-xl lg:text-2xl xl:text-[1.75rem] 2xl:text-3xl font-light">
         As piece of mind for you, all of our vehicles up to 10 years at purchase date will automatically include
-        a
-        comprehensive Gold level warranty cover with no annual millage restrictions. You will be able to make
+        a comprehensive Gold level warranty cover with no annual millage restrictions. You will be able to make
         unlimited number of claims for duration of your policy. The policy will also include a labour charge
-        cover
-        of £80 per hour as standard.
+        cover of £80 per hour as standard.
         <br />
         This policy can be used at any VAT registered garage within the UK and Northern Island.
       </p>
     </div>
   </div>
+  <div class="w-full px-2 sm:px-4 md:px-6 lg:px-8 xl:px-12 mb-24">
+    <div
+      class="max-w-[1600px] md:max-w-[1300px] lg:max-w-[1600px] mx-auto grid grid-cols-1 lg:grid-cols-[2fr_1fr] gap-6 md:gap-8">
 
-  <div class="w-full px-4 sm:px-8 mb-24">
-    <div class="max-w-[1600px] mx-auto grid grid-cols-1 lg:grid-cols-[2fr_1fr] gap-8">
       <!-- Left Column: What's Covered -->
       <div>
         <div class="inline-block">
